# jsac2023-sbom-workshop

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.devcontainer/log4j-vulnerable-app/: README.md  build.gradle
.devcontainer/python-vulnerable-app/: main.py
.github/workflows/: test.yml
docs/: objectives.md  references.md  setup.md  timetable.md  troubleshooting.md
docs/challenges/: 1.md  2.md  3.md  4.md  5.md  index.md  notes.md
docs/lectures/: how_to_create_sbom.md  index.md  osv_101.md  sbom_101.md  what_is_runtime_sbom.md  why_runtime_sbom_is_better.md
jsac2023/: cli.py  cyclonedx.py  utils.py
jsac2023/cyclonedx/: bom.py  schemas.py
jsac2023/java/: __init__.py  cli.py  gradle.py  jar.py
jsac2023/osv/: __init__.py  cli.py  client.py  schemas.py
jsac2023/python/: __init__.py  cli.py  process.py  requirements.py  site_packages.py
tests/fixtures/: gradle.lockfile  requirements.txt
tests/fixtures/cyclonedx/: component.json
tests/fixtures/osv/: vuln.json
tests/fixtures/vcr_cassettes/: osv_query_by_purl.yaml
tests/java/: test_gradle.py  test_jar.py
tests/osv/: test_osv.py  test_schemas.py
tests/python/: test_process.py  test_requirements.py  test_site_packages.py
